test/conformance/chainsaw/exceptions/only-for-specific-user/exception.yaml
apiVersion: kyverno.io/v2
kind: PolicyException
metadata:
  name: mynewpolex
spec:
  background: false
  exceptions:
    - policyName: require-labels
      ruleNames:
        - require-team
  match:
    any:
      - resources:
          kinds:
            - ConfigMap
          names:
            - emergency
        subjects:
          - kind: User
            name: chip
