test/conformance/chainsaw/exceptions/only-for-specific-user/policy.yaml
apiVersion: kyverno.io/v2beta1
kind: ClusterPolicy
metadata:
  name: require-labels
spec:
  background: false
  rules:
    - name: require-team
      match:
        any:
          - resources:
              kinds:
                - ConfigMap
      validate:
        validationFailureAction: Enforce
        message: 'The label `team` is required.'
        pattern:
          metadata:
            labels:
              team: '?*'
