test/conformance/chainsaw/exceptions/only-for-specific-user/02-exception.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: exception
spec:
  timeouts: {}
  try:
  - apply:
      file: exception.yaml
