test/conformance/chainsaw/exceptions/only-for-specific-user/03-configmap.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: configmap
spec:
  timeouts: {}
  try:
  - apply:
      check:
        ($error != null): true
      file: configmap.yaml
